Versão Com Responsividade

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<title> Meu Blog - Index </title>
 		<meta charset="UTF-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	</head>
 	<body>
 		<section>
 			<header>
 				<img alt="Imagem Do Logo Do Site" src="imagens/logotipo2.png"/>
 			</header>
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="index.html"> Início </a></li>
 					<li>
@@ -34,8 +34,8 @@
 				<h1 class="texto-c"> Bem-Vindo </h1>
 				<h2 class="texto-c"> Criado Por Eduardo Rodrigues Alves Prates </h2>
 			</main>
-			<footer class="pouco_conteudo"> 
-				<span> Copyright &copy; Eduardo Rodrigues, todos os direitos reservados. </span> 
+			<footer class="footerPc"> 
+				Copyright &copy; Eduardo Rodrigues, todos os direitos reservados.
 			</footer>
 		</section>
 	</body>
