--- a/portugues.html
+++ b/portugues.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<title> Meu Blog - Português </title>
+		<title> Meu Blog - Index </title>
 		<meta charset="UTF-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="all"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	</head>
 	<body>
 		<section>
 			<header>
 				<img alt="Imagem Do Logo Do Site" src="imagens/logotipo2.png"/>
 			</header>
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="index.html"> Início </a></li>
 					<li>
@@ -45,7 +45,7 @@
 				</article>
 			</main>
 			<footer> 
-				<span> Copyright &copy; Eduardo Rodrigues, todos os direitos reservados. </span> 
+				Copyright &copy; Eduardo Rodrigues, todos os direitos reservados.
 			</footer>
 		</section>
 	</body>
