--- a/criacao_de_conteudo.html
+++ b/criacao_de_conteudo.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Meu Blog - Index </title>
 		<meta charset="UTF-8"/>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 		<link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
 	</head>
 	<body>
@@ -11,7 +11,7 @@
 			<header>
 				<img alt="Imagem Do Logo Do Site" src="imagens/logotipo2.png"/>
 			</header>
-			<nav>
+			<nav class="menu">
 				<ul>
 					<li><a href="index.html"> Início </a></li>
 					<li>
@@ -87,7 +87,7 @@
 				</section>
 			</main>
 			<footer> 
-				<span> Copyright &copy; Eduardo Rodrigues, todos os direitos reservados. </span> 
+				Copyright &copy; Eduardo Rodrigues, todos os direitos reservados.
 			</footer>
 		</section>
 	</body>
