Codigos HTML Agora São Mais Semanticos. Codigos inuteis do CSS removidos

--- a/basesdainternet.html
+++ b/basesdainternet.html
@@ -48,7 +48,7 @@
 					</section>
 					<section>
 						<p> 4°: As senhas devem ser bem elaboradas no mínimo de 8 caracteres e com números e letras em maiúsculo, quanto mais caracteres melhor. Evite usar nomes, sobrenomes, números de telefones ou datas. Não use a mesma senha em todos os serviços. E o principal não marque a senha em nenhum lugar, guarde a senha na cabeça para nunca esquece-la.</p>
-						<img class="criawebImg" alt="imagem de cadeados" src="imagens/bases/cadeados.png"/>
+						<img alt="imagem de cadeados" src="imagens/bases/cadeados.png"/>
 						<hr/>
 					</section>
 					<section>
@@ -57,7 +57,7 @@
 					</section>
 					<section>
 						<p> 6°: Os funcionários deveram trocar de senha periodicamente. Para manter a segurança de suas contas e também da empresa deve-se trocar no mínimo uma vez por semana a senha e que ela seja muito bem elaborada de acordo com a regra número 4°.  </p>
-						<img class="criawebImg" alt="imagem de computador com login e senha" src="imagens/bases/senhas.png"/>
+						<img alt="imagem de computador com login e senha" src="imagens/bases/senhas.png"/>
 						<hr/>
 					</section>
 					<section>
@@ -70,12 +70,12 @@
 					</section>
 					<section>
 						<p> 9°: Phishing é um golpe que criminosos usam para pegar informações de alguém como CPF, contas bancaria, cartão de crédito entre outras coisas, para conseguirem essas informações eles usam e-mails ou sites falsos. </p>
-						<img class="criawebImg" alt="imagem de um ladrão com computador na mão" src="imagens/bases/phishing.png"/>
+						<img alt="imagem de um ladrão com computador na mão" src="imagens/bases/phishing.png"/>
 						<hr/>
 					</section>
 					<section>
 						<p> 10°: Todos os funcionários devem andar com um cartão de identificação feito pela empresa, antes de entrar na empresa sera pedido um código de identificação que estará no cartão de identidade criptografado que só o portador saberá decifrar, esse código sera entregue na contratação do funcionário. Caso perca o cartão avise imediatamente a empresa para fazer um novo e cancelar o antigo.  </p>
-						<img class="criawebImg" alt="imagem de um cara tentando se passar por outro" src="imagens/bases/furtodeidentidade.png"/>
+						<img alt="imagem de um cara tentando se passar por outro" src="imagens/bases/furtodeidentidade.png"/>
 					</section>
 				</article>
 			</main>
