--- a/sobre.html
+++ b/sobre.html
@@ -38,6 +38,7 @@
 					<p>
 						<span class="portugues">Meu nome é Eduardo Rodrigues, tenho 18 anos, atualmente estou cursando a Fatec Jales no curso de Sistemas Para Internet. Escolhi o curso superior por estar conectado a tecnologia e ao futuro através da Web, tenho grande interesse a novas tecnologias. Desenvolvi este blog para mostrar um pouco do que eu aprendi e que ainda estou aprendendo, durante os poucos meses de faculdade mostro por meio deste blog o que a instituição pode oferecer e também o que eu posso oferecer ao mercado de trabalho.</span>
 						<span class="ingles">My name is Eduardo Rodrigues, I am 18 years old, and nowadays I am taking Internet Systems course at Faculdade “Prof. José Camargo” - Fatec Jales. I chose this course because it is connected to Technology and the future through web; I am very fond of new technologies. I have developed this blog in order to show a little bit of the things I have learned and I have been still learning during these few months I’ve been studying in this Institution. Through this blog I’ll show what the institution can offer and also what I can offer to the marketplace.</span>
+						<!-- As classes portugues e ingles sao para o javaScript -->
 					</p>
 				</div>
 			</main>
