Tamanho dos h1 e h2 aumentados. Mais comentarios. Cursor:pointer na pagina sobre

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				</ul>
 			</nav>
 			<main>
-				<h1 class="texto-c index"> Bem-Vindo </h1>
+				<h1 class="texto-c index"> Bem-Vindo </h1> <!-- Classe index usada para centralizar no meio da tela -->
 				<h2 class="texto-c"> Criado Por Eduardo Rodrigues Alves Prates </h2>
 			</main>
 			<footer class="footerPc"> 
